k8s-specification/database-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deploy
  labels:
    name: database-deploy
    app: kubernetes-poc
spec:
  selector:
    matchLabels:
      name: database-po
      app: kubernetes-poc
  template:
    metadata:
      name: database-po
      labels:
        name: database-po
        app: kubernetes-poc
    spec:
      containers:
        - name: mysql-server
          image: mysql/mysql-server:8.0.32-1.2.11-server
          volumeMounts:
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: database-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-initdb
          secret:
            secretName: mysql-initdb-config
        - name: database-persistent-storage
          persistentVolumeClaim:
            claimName: database-pvc
