k8s-specification/database-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database-pod
  labels:
    app: database
spec:
  containers:
    - name: mysql-server
      image: mysql/mysql-server:8.0.32-1.2.11-server
