k8s-specification/database-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-sts
  labels:
    name: database-deploy
    app: kubernetes-poc
spec:
  serviceName: mysql-server-h
  selector:
    matchLabels:
      name: database-po
      app: kubernetes-poc
  template:
    metadata:
      name: database-po
      labels:
        name: database-po
        app: kubernetes-poc
    spec:
      subdomain: mysql-server-h
      hostname: mysql-pod
      containers:
        - name: mysql-server
          image: mysql/mysql-server:8.0.32-1.2.11-server
          volumeMounts:
            - name: database-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: database-persistent-storage
          persistentVolumeClaim:
            claimName: database-pvc
