k8s-specification/external-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: external-service-pod
  labels:
    app: external-service-app
spec:
  containers:
    - name: external-service
      image: external-service:1.0.0
      ports:
        - containerPort: 8080
