k8s-specification/internal-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-service-deploy
  labels:
    name: internal-service-deploy
    app: kubernetes-poc
spec:
  selector:
    matchLabels:
      name: internal-service-po
      app: kubernetes-poc
  template:
    metadata:
      name: internal-service-po
      labels:
        name: internal-service-po
        app: kubernetes-poc
    spec:
      containers:
        - name: internal-service-container
          image: internal-service:1.0.0
          ports:
            - containerPort: 8081
          startupProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 8
            exec:
              command: [ "sh", "-c", "nc -zv $MYSQL_HOST $MYSQL_PORT" ]
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 8
            exec:
              command: [ "sh", "-c", "nc -zv $MYSQL_HOST $MYSQL_PORT" ]
