k8s-specification/internal-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: internal-service-pod
  labels:
    app: internal-service-app
spec:
  containers:
    - name: internal-service
      image: internal-service:1.0.0
      ports:
        - containerPort: 8081
