k8s-specification/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app: database-service
spec:
  selector:
    app: database
  ports:
    - port: 3306
