k8s-specification/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-server-h
  labels:
    name: myssql-server-h
    app: kubernetes-poc
spec:
  selector:
    name: database-po
    app: kubernetes-poc
  ports:
    - port: 3306
  clusterIP: None
