k8s-specification/external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-svc
  labels:
    name: external-svc
    app: kubernetes-poc
spec:
  type: LoadBalancer
  selector:
    name: external-service-po
    app: kubernetes-poc
  ports:
    - port: 8080
      nodePort: 30000
