k8s-specification/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-service
  labels:
    name: internal-service
    app: kubernetes-poc
spec:
  selector:
    name: internal-service-pod
  ports:
    - port: 8081
