k8s-specification/internal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-svc
  labels:
    name: internal-svc
    app: kubernetes-poc
spec:
  selector:
    name: internal-service-po
  ports:
    - port: 8081
