k8s-specification/default-deny-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-netpol
  labels:
    name: default-deny-netpol
    app: kubernetes-poc
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
