k8s-specification/internal-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-service-netpol
  labels:
    name: internal-service-netpol
    app: kubernetes-poc
spec:
  podSelector:
    matchLabels:
      name: internal-service-po
      app: kubernetes-poc
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: external-service-po
              app: kubernetes-poc
      ports:
        - protocol: TCP
          port: 8081
